--- a/app/src/main/res/layout/activity_service.xml
+++ b/app/src/main/res/layout/activity_service.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
-    android:orientation="vertical"
-    tools:context="com.example.sample.ui.fourcomp.FourCompActivity">
+    android:orientation="vertical">
 
     <com.example.sample.widget.SimpleToolbar
         android:id="@+id/toolbar"
