--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,5 +7,6 @@
     <dimen name="default_circle_indicator_spacing">4dip</dimen>
     <dimen name="default_circle_indicator_spacing_lager">6dip</dimen>
     <dimen name="default_circle_indicator_stroke_width">0px</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 
 </resources>
