--- a/app/src/main/res/layout/activity_interview.xml
+++ b/app/src/main/res/layout/activity_interview.xml
@@ -36,4 +36,12 @@
         android:onClick="onClick"
         android:text="b" />
 
+    <Button
+        android:id="@+id/bt_sql"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:onClick="onClick"
+        android:text="数据库基本操作" />
+
 </LinearLayout>
