--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -8,37 +8,72 @@
     android:orientation="vertical">
 
     <com.example.sample.widget.SimpleToolbar
-        app:layout_constraintTop_toTopOf="parent"
         android:id="@+id/toolbar"
         style="@style/NoNavSimpleToolbarStyle"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:stb_navigation_icon="@mipmap/ic_launcher"
         app:stb_rightIv="@mipmap/ic_launcher"
         app:stb_title_text="TEST"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="parent"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        tools:layout_constraintRight_creator="1" />
 
     <TextView
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         android:id="@+id/tv_test"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
         android:textColor="@color/black"
         android:textSize="14sp"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/toolbar" />
+        app:layout_constraintLeft_toLeftOf="@+id/toolbar"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        tools:layout_constraintLeft_creator="1" />
 
     <Button
-        android:id="@+id/bt_model_explain"
-        android:background="@drawable/shape_bg_blue_dark_corner_five"
-        android:textSize="15sp"
-        android:gravity="center"
-        android:textColor="@color/white"
-        android:text="说明"
-        android:layout_width="40dp"
+        android:id="@+id/bt_mvc"
+        android:layout_width="60dp"
         android:layout_height="40dp"
+        android:background="@drawable/shape_bg_blue_dark_corner_five"
+        android:gravity="center"
+        android:onClick="onClick"
+        android:text="mvc"
+        android:textColor="@color/white"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.95" />
+
+    <Button
+        android:id="@+id/bt_mvp"
+        android:layout_width="60dp"
+        android:layout_height="40dp"
+        android:background="@drawable/shape_bg_blue_dark_corner_five"
+        android:gravity="center"
+        android:onClick="onClick"
+        android:text="mvp"
+        android:textColor="@color/white"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.95" />
+
+    <Button
+        android:id="@+id/bt_mvvm"
+        android:layout_width="60dp"
+        android:layout_height="40dp"
+        android:background="@drawable/shape_bg_blue_dark_corner_five"
+        android:gravity="center"
+        android:onClick="onClick"
+        android:text="mvvm"
+        android:textColor="@color/white"
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.9"
         app:layout_constraintLeft_toLeftOf="parent"
